# opencv

./: README.md  pubspec.yaml
android/: .gitignore  CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/dev/yanshouwang/opencv/: OpencvPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/dev/yanshouwang/opencv_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ffi/: opencv_ffi.cpp
ffi/include/: opencv_ffi.h
ios/: opencv.podspec
ios/Classes/: OpencvPlugin.h  OpencvPlugin.m  SwiftOpencvPlugin.swift
lib/: opencv.dart
lib/src/: opencv.dart  opencv_native.dart  wrapcv.dart
native/: wrapcv.cpp
native/include/: wrapcv.h
scripts/: setup_windows.ps1
test/: opencv_test.dart
windows/: .gitignore  CMakeLists.txt  opencv_native.cpp  opencv_plugin.cpp
windows/include/opencv/: opencv_native.h  opencv_plugin.h
